Cambiar nombres de los botones y los id

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ConvertidorUnidades</string>
     <string name="btnStart">Start</string>
+    <string name="btnConvert">Convert</string>
 </resources>
